# tiktok-telegram-bot

./: .env.example  LICENSE  README.md  justfile  main.py  pyproject.toml  requirements.txt
bot/: config.py  handlers.py  tiktok.py  utils.py
bot/handlers/: __init__.py  error.py  errors.py  message.py  start.py  url.py
bot/routers/: __init__.py  command.py  error.py  message.py
bot/services/: __init__.py  models.py  tiktok.py  tiktok_api.py  tiktok_web.py  tikwm.py  utils.py
bot/services/tiktok_api/: __init__.py  models.py
bot/services/tiktok_web/: __init__.py  models.py
