[project]
name = "tiktok-telegram-bot"
version = "0.1.0"
authors = [{ name = "valsoray-dev" }]
description = "Telegram bot to download videos/photos/music from TikTok"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "aiogram[fast]~=3.19",
    "aiohttp[speedups]~=3.11",
    "orjson~=3.10",
    "python-dotenv~=1.1",
    "rich~=13.9",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100